Use native locale name in Settings dialog

--- a/src/locale/ar-SY.json
+++ b/src/locale/ar-SY.json
@@ -2,5 +2,6 @@
   "action_load_sample_image": "حمل صورة للتجربة",
   "action_pick_image": "انقر لاختيار صورة",
   "callout_load_sample_image": "ليس في متناولك صورة الآن؟ جرب صورة من ويكيبيديا!",
-  "callout_start_tracing": "لبدء الترسيم، أسقط صورة سيفالومترية أو ضوئية هنا"
+  "callout_start_tracing": "لبدء الترسيم، أسقط صورة سيفالومترية أو ضوئية هنا",
+  "label_language": "اللغة"
 }
